--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,49 @@ body {
   font-family: "Josefin Sans", sans-serif;
   font-weight: 400; }
 
+.heading-2 {
+  font-size: 4rem;
+  font-style: italic;
+  line-height: 1; }
+  .heading-2--light {
+    color: #f9f7f6; }
+  .heading-2--dark {
+    color: #54483A; }
+
+.heading-3 {
+  font-size: 3rem;
+  text-transform: uppercase; }
+
 .heading-4 {
   font-size: 1.9rem; }
   .heading-4--light {
     color: #f9f7f6; }
   .heading-4--dark {
     color: #54483A; }
+
+.btn {
+  padding: 1rem 2rem;
+  color: white;
+  background-color: #c69963;
+  border: none;
+  border-radius: .2rem;
+  text-transform: uppercase;
+  cursor: pointer; }
+  .btn:hover {
+    background-color: #B28451;
+    transition: all .2s; }
+
+.mb-sm {
+  margin-bottom: 2rem; }
+
+.mb-md {
+  margin-bottom: 3rem; }
+
+.mb-lg {
+  margin-bottom: 4rem; }
+
+.mb-hg {
+  margin-bottom: 8rem; }
 
 .sidebar {
   background-color: #c69963;
@@ -69,16 +106,89 @@ body {
 
 .story__pictures {
   background-color: #B28451;
-  grid-column: full-start / col-end 4; }
+  grid-column: full-start / col-end 4;
+  background-image: linear-gradient(rgba(198, 153, 99, 0.5), rgba(198, 153, 99, 0.5)), url(../img/back.jpg);
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(6, 1fr);
+  align-items: center; }
 
 .story__content {
   background-color: #aaa;
-  grid-column: col-start 5 / full-end; }
+  grid-column: col-start 5 / full-end;
+  padding: 6rem 7vw;
+  display: grid;
+  grid-template-columns: 1;
+  align-content: center;
+  justify-items: start; }
+
+.story__img--1 {
+  width: 100%;
+  grid-row: 2 / span 4;
+  grid-column: 2/6; }
+
+.story__img--2 {
+  width: 110%;
+  grid-row: 4 / 7;
+  grid-column: 4/-1;
+  z-index: 10; }
+
+.story_text {
+  font-size: 1.4rem;
+  font-size: italic; }
 
 .homes {
   background-color: yellow;
-  color: red;
-  grid-column: center-start / center-end; }
+  grid-column: center-start / center-end;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+  grid-gap: 7rem; }
+
+.home {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); }
+  .home__img {
+    width: 100%;
+    grid-column: 1/-1;
+    grid-row: 1/2;
+    z-index: 1; }
+  .home__like {
+    width: 2.5rem;
+    height: 2.5rem;
+    fill: #c69963;
+    grid-row: 1/2;
+    grid-column: 2/3;
+    justify-self: end;
+    margin: 1rem;
+    z-index: 2; }
+  .home__title {
+    grid-row: 1/2;
+    grid-column: 1/-1;
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 1.6rem;
+    padding: 1.25rem;
+    background-color: #101d2c;
+    color: white;
+    font-weight: 400;
+    width: 80%;
+    text-align: center;
+    z-index: 1;
+    justify-self: center;
+    align-self: end;
+    transform: translateY(50%); }
+  .home__location, .home__rooms, .home__area, .home__price {
+    display: flex;
+    justify-content: start;
+    align-items: center; }
+    .home__location svg, .home__rooms svg, .home__area svg, .home__price svg {
+      fill: #c69963;
+      height: 2rem;
+      width: 2rem;
+      align-self: center; }
+    .home__location p, .home__rooms p, .home__area p, .home__price p {
+      align-self: center; }
+  .home__retlor-btn {
+    grid-column: 1/-1; }
 
 .gallery {
   background-color: #aaa;
