--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -9,9 +9,22 @@
 
 .heading-2{
     @extend %heading;
+    font-size: 4rem;
+    font-style:italic;
+    line-height: 1;
+    &--light {
+        color: $color-grey-light-1;
+    }
+
+    &--dark {
+        color: $color-grey-dark-1;
+    }
+     
 }
 .heading-3{
     @extend %heading;
+    font-size: 3rem;
+    text-transform: uppercase
 }
 .heading-4{
     @extend %heading;
@@ -24,4 +37,31 @@
     &--dark {
         color: $color-grey-dark-1;
     }
+}
+.btn{
+    padding: 1rem 2rem;
+    color: white;
+    background-color: $color-primary;
+    border: none;
+    border-radius: .2rem;
+    text-transform: uppercase;
+    cursor: pointer;
+
+    &:hover{
+        background-color: $color-primary-dark;
+        transition: all .2s;
+    }
+}
+
+.mb-sm{
+    margin-bottom: 2rem;
+}
+.mb-md{
+    margin-bottom: 3rem;
+}
+.mb-lg{
+    margin-bottom: 4rem;
+}
+.mb-hg{
+    margin-bottom: 8rem;
 }
